# AI-Wildfire-Risk

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: backend.yml  ci.yml
ai/: requirements.txt
ai/artifacts/: baseline_model.joblib  baseline_model.joblib.metadata.json  metrics.json
ai/src/ai_wildfire/: configs.py  data_loader.py  features.py  model_store.py  predict.py  train.py  utils.py
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/src/ai_wildfire_tracker/api/: server.py
backend/src/ai_wildfire_tracker/ingest/: firms.py  ndvi.py  nifc.py  noaa_hms.py  weather.py
backend/src/ai_wildfire_tracker/jobs/: scheduler.py
backend/tests/: conftest.py  test_api.py  test_api_edge_cases.py  test_api_more.py  test_ingest_firms.py  test_ingest_noaa_hms.py  test_limit_param.py  test_metrics.py  test_ndvi.py  test_nifc.py  test_performance.py  test_risk_score.py  test_weather.py
backend/tests/e2e/: seed_db.py
backend/tests/integration/: test_integration.py
backend/tests/performance/: test_performance.py
backend/tests/security/: test_security.py
frontend/: .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.js
frontend/e2e/: api_offline.spec.ts  fires.spec.ts  performance.spec.ts
frontend/src/: AIPredictionPanel.jsx  App.jsx  App.test.jsx  index.css
test-tracking/: README.md  REPORT.md  generate_report.py  seed_history.py
test-tracking/bugs/: bug-registry.md
test-tracking/results/: build-001-a1b2c3d.json  build-002-e4f5a6b.json  build-003-c7d8e9f.json  build-004-f0a1b2c.json
tests/: test_api.py
(+15 files in other folders)
